--- a/VDMS/Web.config
+++ b/VDMS/Web.config
@@ -19,7 +19,7 @@
     <add key="MailServer" value="north-mail01.internal.vodafone.com"/>
     <add key="SenderAccount" value="ralucavianina.draghici@vodafone.com"/>
     <add key="CredentialsUserName" value="ralucavianina.draghici@vodafone.com"/>
-    <add key="CredentialsPassword" value=""/>
+    <add key="CredentialsPassword" value="Start1234"/>
     <add key="EnableSsl" value="True"/>
     
   </appSettings>
