--- a/VDMS/db.config
+++ b/VDMS/db.config
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <connectionStrings>
-    <add name="VDMSConnectionString" connectionString="data source=.\sqlprod;initial catalog=VDMS-local;user id=sa;password=Vodafone2015;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="VDMSConnectionString" connectionString="data source=E0291653\sqlprod;initial catalog=VDMS-DEV;user id=sa;password=was5eyuh5hf@;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 </connectionStrings>
