--- a/VDMS/Web.config
+++ b/VDMS/Web.config
@@ -8,7 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings configSource="db.config" />
+  <connectionStrings>
+    <add name="VDMSConnectionString" connectionString="data source=E0291653\sqlprod;initial catalog=VDMS-DEV;user id=sa;password=was5eyuh5hf@;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
