--- a/VDMS/Web.config
+++ b/VDMS/Web.config
@@ -26,6 +26,7 @@
     
   </appSettings>
   <system.web>
+    <roleManager enabled="true" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
