--- a/VDMS/Web.config
+++ b/VDMS/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="VDMSConnectionString" connectionString="data source=E0291653\sqlprod;initial catalog=VDMS-DEV;user id=sa;password=was5eyuh5hf@;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="VDMSConnectionString" connectionString="data source=E0291653\SQLPROD;initial catalog=VDMS-dev;user id=sa;password=was5eyuh5hf@;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -33,7 +33,8 @@
   </system.web>
   <system.webServer>
     <modules>
-      <remove name="FormsAuthentication" />
+      <remove name="FormsAuthentication" />      
+        <remove name="RoleManager" />      
     </modules>
   </system.webServer>
   <runtime>
