--- a/VDMS/VDMS.csproj
+++ b/VDMS/VDMS.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Models\DocumentLog.cs" />
     <Compile Include="Models\DocumentType.cs" />
     <Compile Include="Models\Helpers\ExceptionLogger.cs" />
+    <Compile Include="Models\Helpers\OperationLogger.cs" />
     <Compile Include="Models\sysdiagram.cs" />
     <Compile Include="Models\UserLog.cs" />
     <Compile Include="Models\VDMSModel.cs" />
