Enable exception logging using web.config variable

--- a/VDMS/Web.config
+++ b/VDMS/Web.config
@@ -23,6 +23,7 @@
     <add key="CredentialsUserName" value="ralucavianina.draghici@vodafone.com"/>
     <add key="CredentialsPassword" value=""/>
     <add key="EnableSsl" value="True"/>
+    <add key="EnableExceptionLogging" value="True"/>
     
   </appSettings>
   <system.web>
