email validation during register new email account

--- a/VDMS/Web.config
+++ b/VDMS/Web.config
@@ -16,26 +16,24 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    
     <!--Send email settings-->
     <add key="MailServer" value="north-mail01.internal.vodafone.com"/>
-    <add key="SenderAccount" value="ralucavianina.draghici@vodafone.com"/>
-    <add key="CredentialsUserName" value="ralucavianina.draghici@vodafone.com"/>
+    <add key="CredentialsUserName" value="ROSVC.DEVSupport"/>
+    <add key="SenderAccount" value="devsupport@vodafone.com"/>
     <add key="CredentialsPassword" value=""/>
     <add key="EnableSsl" value="True"/>
     <add key="EnableExceptionLogging" value="True"/>
-    
   </appSettings>
   <system.web>
     <roleManager enabled="true" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-  </system.web> 
+  </system.web>
   <system.webServer>
     <modules>
-      <remove name="FormsAuthentication" />      
-        <remove name="RoleManager" />      
+      <remove name="FormsAuthentication" />
+      <remove name="RoleManager" />
     </modules>
   </system.webServer>
   <runtime>
