Added email credentials to Web.Config

--- a/VDMS/Web.config
+++ b/VDMS/Web.config
@@ -20,7 +20,7 @@
     <add key="MailServer" value="north-mail01.internal.vodafone.com"/>
     <add key="CredentialsUserName" value="ROSVC.DEVSupport"/>
     <add key="SenderAccount" value="devsupport@vodafone.com"/>
-    <add key="CredentialsPassword" value=""/>
+    <add key="CredentialsPassword" value="4roSiUS6"/>
     <add key="EnableSsl" value="True"/>
     <add key="EnableExceptionLogging" value="True"/>
   </appSettings>
