--- a/VDMS/VDMS.csproj
+++ b/VDMS/VDMS.csproj
@@ -247,6 +247,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="App_Code\Functions.cshtml" />
     <None Include="Properties\PublishProfiles\DraghiciR.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
